[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/key_shortcut_creator/KeyShortcutCreator.gd" type="Script" id=1]
[ext_resource path="res://addons/key_shortcut_creator/KeyGrabberButton.gd" type="Script" id=2]

[node name="KeyShortcutCreator" type="WindowDialog"]
visible = true
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
focus_mode = 1
window_title = "Key Shortcut Creator"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputKey" type="Button" parent="VBoxContainer"]
margin_right = 230.0
margin_bottom = 106.0
focus_next = NodePath("../CreateButton")
size_flags_vertical = 3
text = "Keys"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
empty_font_color = Color( 0.74902, 0.74902, 0.74902, 1 )

[node name="CreateButton" type="Button" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 230.0
margin_bottom = 130.0
disabled = true
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="about_to_show" from="." to="." method="_on_about_to_show"]
[connection signal="grabbed_event_cleared" from="VBoxContainer/InputKey" to="." method="_on_InputKey_grabbed_event_cleared"]
[connection signal="grabbed_event_updated" from="VBoxContainer/InputKey" to="." method="_on_InputKey_grabbed_event_updated"]
[connection signal="pressed" from="VBoxContainer/InputKey" to="." method="_on_InputKey_pressed"]
[connection signal="pressed" from="VBoxContainer/CreateButton" to="." method="_on_Create_pressed"]
